# BMI-Score

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/BMI-Score/: __init__.py  bmi_score.py
src/BMI_Score/: bmi_score.py
src/BMI_Score.egg-info/: PKG-INFO
tests/: test_bmi_score.py
