[project]
name = "BMI-Scale"
version = "0.0.1"
authors = [
  { name="Paballo Modutwane", email="pablomodutwane@gmail.com" },
]
description = "This package calculates your BMI score"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"